--- a/views/acceuil.ejs
+++ b/views/acceuil.ejs
@@ -16,7 +16,7 @@
             <!--Reste de la page Accueil -->
             <div id="acceuil" class="col-md-12">
                 <div class="text-center align-middle justify-content-center row" id="aa">
-                    <!--                    Caroussel-->
+                    <!--                    Carousel-->
                     <div id="carous">
                         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                             <ol class="carousel-indicators">
@@ -29,7 +29,7 @@
                                     <img class="d-block img-fluid " src="img/jumping_joy.jpg" alt="First slide">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h5>Le concept</h5>
-                                        <p>Vous devez effectuer un trajet mais les transports en communs ne le pemettent pas? Alors vous êtes au bon endroit. En effet, notre site vous permet de rechercher une multitude de trajet et de rencontrer de nombreuses personnes grâce au covoiturage.</p>
+                                        <p>Vous devez effectuer un trajet mais les transports en communs ne le permettent pas? Alors vous êtes au bon endroit. En effet, notre site vous permet de rechercher une multitude de trajet et de rencontrer de nombreuses personnes grâce au covoiturage.</p>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
@@ -57,11 +57,11 @@
                             </a>
                         </div>
                     </div>
-                    <!--                    Description du caroussel affiché uniquement quand on est sur petit écran-->
+                    <!--  Description du caroussel affiché uniquement quand on est sur petit écran-->
                     <section id="description"  >
                         <article>
                             <h5>Le concept</h5>
-                            <p class="text-left">Vous devez effectuer un trajet mais les transports en communs ne le pemettent pas? Alors vous êtes au bon endroit. En effet, notre site vous permet de rechercher une multitude de trajet et de rencontrer de nombreuses personnes grâce au covoiturage.</p>
+                            <p class="text-left">Vous devez effectuer un trajet mais les transports en communs ne le permettent pas? Alors vous êtes au bon endroit. En effet, notre site vous permet de rechercher une multitude de trajet et de rencontrer de nombreuses personnes grâce au covoiturage.</p>
                         </article>
                         <article>
                             <h5>Comment ça marche?</h5>
