--- a/views/partials/menuProfil.ejs
+++ b/views/partials/menuProfil.ejs
@@ -7,7 +7,7 @@
     <!-- Menu affiché sur les grands écrans-->
     <div id="gdmenu" class="menu">
         <div class="col-md-12">
-            <a href="./" class="col-md-1" title="home"><i class="fas fa-home"></i></a>
+            <a href="../" class="col-md-1" title="home"><i class="fas fa-home"></i></a>
             <a href="javascript:void(0)" class=" col-md- 6 closebtn" onclick="hideMenu()">&times;</a>
         </div>
 
@@ -28,12 +28,12 @@
         </div>
 
 
-        <a href="./Profil" title="profil"><i class="fas fa-user"></i></a>
-        <a href="./Messagerie" title="messagerie"><i class="fas fa-comments"></i></a>
-        <a href="./Rechercher" title="rechercher"><i class="fas fa-search"></i></a>
+        <a href="../Profil" title="profil"><i class="fas fa-user"></i></a>
+        <a href="../Messagerie" title="messagerie"><i class="fas fa-comments"></i></a>
+        <a href="../Rechercher" title="rechercher"><i class="fas fa-search"></i></a>
         <a href="./search" title="Rechercher un profil"><i class="fas fa-users"></i></a>
-        <a href="./Proposer" title="Proposer un trajet"><i class="fas fa-map-marked-alt"></i></a>
-        <a href="./Demande" title="Mes réservations"><i class="far fa-calendar-alt"></i></a>
+        <a href="../Proposer" title="Proposer un trajet"><i class="fas fa-map-marked-alt"></i></a>
+        <a href="../Demande" title="Mes réservations"><i class="far fa-calendar-alt"></i></a>
     </div>
 
 </div>
