--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -52,14 +52,14 @@
                                             <input type="email"  class="form-control " name="email" id="email" value="<%= useremail %>" readonly>
                                         </div>
                                     </div>
-                                    <% if(logged==true){ %>
+                                    <% if(canEdit==true) { %>
                                     <div class="form-group row">
                                         <label for="email" class="col-sm-3 col-4 col-form-label">Adresse </label>
                                         <div class="col-sm-9 col input-group mb-2">
                                             <input type="search" class="form-control " id="adr-depart-input" placeholder="<%= adrPers %>" name="adress">
                                         </div>
                                     </div>
-                                    <% } else if(logged==false) { %>
+                                    <% } else { %>
                                     <div class="form-group row">
                                         <label for="email" class="col-sm-3 col-4 col-form-label">Adresse </label>
                                         <div class="col-sm-9 col input-group mb-2">
@@ -68,14 +68,14 @@
                                     </div>
                                     <% } %>
                                     <div class="text-center my-4">
-                                        <%if (canEdit==true) {%> <button class="btn btn-info btn-sm" type="submit">Modifier</button> <%}%>
+                                        <%if (canEdit==true) {%> <button class="btn btn-info btn-sm" type="submit">Modifier</button> <%} %>
 
                                     </div>
 
 
                                 </form>
 
-                                <% if(logged==false){ %>
+                                <% if((canEdit != true) && (User != useremail)) { %>
                                 <a href="../Contact/<%= useremail %>">Contacter</a>
                                 <% } %>
                             </div>
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                         <div class="col-sm-12 row" id="nb_trajet">
-                            <p class="col-sm-12">Nombre de trajets : 50</p>
+                            <p class="col-sm-12">Nombre de trajets : <%= Nbtrajet.length %> </p>
                         </div>
 <!--
                         <div class="col-sm-12 row">
