--- a/views/rechercher.ejs
+++ b/views/rechercher.ejs
@@ -126,7 +126,7 @@
                                      <% if(user != trajecto[i].IdChauffeur){ %>
                                     <div class="col-md-12 col-12 row">
                                         <p class="col-md-4 col-5 ">Contacter</p>
-                                        <a class="col-md col" href=""><%= trajecto[i].IdChauffeur %></a>
+                                        <a class="col-md col" href="../Contact/<%= trajecto[i].IdChauffeur %>"><%= trajecto[i].IdChauffeur %></a>
                                     </div>
                                     <% } else { %>
                                     <div class="col-md-12 col-12 row">
