--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -91,7 +91,7 @@
                             <input type="password" required="required" class="form-control" id="mdp1" placeholder="*******" name="MdpReg">
                         </div>
                         <div class="col-sm-4 col">
-                            <input type="password" required="required" class="form-control" id="MdpReg2" placeholder="*******">
+                            <input type="password" required="required" class="form-control" id="mdp2" name="MdpReg2" placeholder="*******">
                         </div>
                     </div>
                     <div class="form-group row">
