--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -25,7 +25,7 @@
                             <form action="upload" method="post" enctype="multipart/form-data">
 
                                 <div class="col-md-12">
-                                    <input type="file" onchange="form.submit()" class="form-control-file" id="exampleFormControlFile1" name="PictureFile" >
+                                    <input type="file" accept="image/png" onchange="form.submit()" class="form-control-file" id="exampleFormControlFile1" name="PictureFile" >
                                 </div>
                             </form>
                             <% } %>
